Add github pages steps

--- a/test_presentation.html
+++ b/test_presentation.html
@@ -1168,6 +1168,11 @@ Leonor Schubert
 <li>Output from executable code</li>
 </ul>
 </section>
+<section id="github-pages" class="slide level2">
+<h2>GitHub Pages</h2>
+<p>Click on settings in repository online, go to pages on the left and change branch to main (or github-pg)</p>
+<p>In about click on settings and click on use github pages website for the description, unclick again and add the presentation.html filename to the end of this path.</p>
+</section>
 <section id="code" class="slide level2">
 <h2>Code</h2>
 <p>When you click the <strong>Render</strong> button a presentation will be generated that includes both content and the output of embedded code. You can embed code like this:</p>
